--- a/map.html
+++ b/map.html
@@ -83,6 +83,7 @@
             font-size: 9px;
             font-weight: bold;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
+            border: 1px solid rgba(255,255,255,0.3);
         }
 
         .pixel:hover {
@@ -93,18 +94,20 @@
 
         .pixel.empty {
             background: transparent;
+            border: 1px solid rgba(255,255,255,0.1);
         }
 
         .pixel-border {
             position: absolute;
-            background: rgba(255,255,255,0.8);
+            background: rgba(255,255,255,0.9);
             z-index: 5;
+            pointer-events: none;
         }
 
-        .border-top { top: -1px; left: 0; width: 100%; height: 1px; }
-        .border-right { top: 0; right: -1px; width: 1px; height: 100%; }
-        .border-bottom { bottom: -1px; left: 0; width: 100%; height: 1px; }
-        .border-left { top: 0; left: -1px; width: 1px; height: 100%; }
+        .border-top { top: -1px; left: 0; width: 100%; height: 2px; }
+        .border-right { top: 0; right: -1px; width: 2px; height: 100%; }
+        .border-bottom { bottom: -1px; left: 0; width: 100%; height: 2px; }
+        .border-left { top: 0; left: -1px; width: 2px; height: 100%; }
 
         .controls {
             background: rgba(255,255,255,0.05);
@@ -237,6 +240,18 @@
             font-size: 0.9em;
             opacity: 0.8;
             margin-bottom: 10px;
+        }
+
+        /* Улучшенные стили для границ */
+        .country-border {
+            position: absolute;
+            background: rgba(255,255,255,0.8);
+            z-index: 8;
+        }
+
+        .thick-border {
+            background: rgba(255,255,255,0.9);
+            box-shadow: 0 0 5px rgba(255,255,255,0.5);
         }
     </style>
 </head>
@@ -631,7 +646,7 @@
                         if (neighborCountry !== country) {
                             // Добавляем границу
                             const border = document.createElement('div');
-                            border.className = `pixel-border border-${neighbor.border}`;
+                            border.className = `pixel-border border-${neighbor.border} thick-border`;
                             pixel.appendChild(border);
                         }
                     } else {
@@ -728,6 +743,7 @@
 
                 pixel.style.opacity = shouldShow ? '1' : '0.3';
                 pixel.style.background = color;
+                pixel.style.borderColor = 'rgba(255,255,255,0.4)'; // Более видимая граница
             });
         }
 
